backups/backup/scheduler-external.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"ai-model-scheduler"},"name":"ai-model-scheduler","namespace":"scheduler"},"spec":{"ports":[{"name":"api","port":9000,"targetPort":9000},{"name":"metrics","port":9110,"targetPort":9110}],"type":"ClusterIP"}}
    creationTimestamp: "2026-06-28T15:22:48Z"
    labels:
      app: ai-model-scheduler
    name: ai-model-scheduler
    namespace: scheduler
    resourceVersion: "336759"
    uid: 80909798-9f65-46e0-8357-9878d09c1687
  spec:
    clusterIP: 10.43.105.5
    clusterIPs:
    - 10.43.105.5
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: metrics
      port: 9110
      protocol: TCP
      targetPort: 9110
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Endpoints","metadata":{"annotations":{},"name":"ai-model-scheduler","namespace":"scheduler"},"subsets":[{"addresses":[{"ip":"100.113.74.68"}],"ports":[{"name":"api","port":9000},{"name":"metrics","port":9110}]}]}
    creationTimestamp: "2026-06-28T15:22:48Z"
    name: ai-model-scheduler
    namespace: scheduler
    resourceVersion: "336760"
    uid: 41cec6c4-4f16-4cf7-a81c-acfd1033e074
  subsets:
  - addresses:
    - ip: 100.113.74.68
    ports:
    - name: api
      port: 9000
      protocol: TCP
    - name: metrics
      port: 9110
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
